force-app/main/default/objects/Lab_Order__c/fields/shl_encryption_key__c.field-meta.xml
<CustomField>
    <fullName>shl_encryption_key__c</fullName>
    <description>smart on FHIR encryption key</description>
    <label>shl_key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>