force-app/main/default/objects/Lab_Order__c/fields/shl_location__c.field-meta.xml
<CustomField>
    <fullName>shl_location__c</fullName>
    <description>location reference for apple health record</description>
    <externalId>true</externalId>
    <label>shl_location</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>