force-app/main/default/objects/Lab_Order__c/fields/Stuck_In_Registered__c.field-meta.xml
<CustomField>
    <fullName>Stuck_In_Registered__c</fullName>
    <formula>AND(
TODAY() - Date_of_Collection__c = 15,
 ISPICKVAL(Status__c , &quot;Registered&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stuck In Registered</label>
    <type>Checkbox</type>
</CustomField>