force-app/main/default/objects/Lab_Order__c/fields/Total_In_Progress__c.field-meta.xml
<CustomField>
    <fullName>Total_In_Progress__c</fullName>
    <label>Total In Progress</label>
    <summaryFilterItems>
        <field>Lab_Order_Panel__c.Panel_Status__c</field>
        <operation>equals</operation>
        <value>In Progress</value>
    </summaryFilterItems>
    <summaryForeignKey>Lab_Order_Panel__c.Lab_Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>