force-app/main/default/objects/Lab_Order__c/fields/Total_Panels__c.field-meta.xml
<CustomField>
    <fullName>Total_Panels__c</fullName>
    <label>Total Panels</label>
    <summaryForeignKey>Lab_Order_Panel__c.Lab_Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>