force-app/main/default/objects/Lab_Order__c/fields/UpdatedAt__c.field-meta.xml
<CustomField>
    <fullName>UpdatedAt__c</fullName>
    <label>UpdatedAt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>