force-app/main/default/objects/Lab_Order__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Partner_Order_Total__c</columns>
    <columns>Client_ID__c</columns>
    <columns>Date_Reported__c</columns>
    <columns>Order_Summary__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Partner_Client_Map__c</columns>
    <columns>Client_Name__c</columns>
    <columns>Refund_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>