force-app/main/default/objects/Lab_Order__c/listViews/Saturn_LOs.listView-meta.xml
<ListView>
    <fullName>Saturn_LOs</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Order_Summary__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>HUB_Success__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Partner_Client_Map__c</field>
        <operation>equals</operation>
        <value>Saturn</value>
    </filters>
    <label>Saturn LOs</label>
</ListView>